fix(filter): the text inputs no longer look cramped together

--- a/Cards-of-Runeterra/src/app/containers/home/home.component.scss
+++ b/Cards-of-Runeterra/src/app/containers/home/home.component.scss
@@ -115,7 +115,7 @@
     }
 
     .text-input-container {
-      height: 200px;
+      height: 300px;
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
